Apertura casella al click e fix overflow

--- a/src/app/mailbox/mail-list/mail-list.component.scss
+++ b/src/app/mailbox/mail-list/mail-list.component.scss
@@ -100,7 +100,7 @@
   //align-items: stretch;
   //flex-direction: row;
   height: 70px !important;
-  //white-space-collapsing: collapse; 
+  //white-space-collapsing: collapse;
   //text-wrap: none;
   white-space: nowrap;
   //overflow: scroll;
@@ -111,11 +111,16 @@
   // border-color:cornflowerblue !important;
 }
 
-.material-icons.mail-icons { 
-  // color: rgb(250, 250, 250); 
+.material-icons.mail-icons {
+  // color: rgb(250, 250, 250);
   font-size: 18px;
 }
 
 ::ng-deep .context-menu-mail-list {
   margin: -128px 0 0 -312px;
+}
+
+.message-align {
+  justify-content: center;
+  align-items: center;
 }
